--- a/charts/mla/grafana/values.yaml
+++ b/charts/mla/grafana/values.yaml
@@ -1,3 +1,17 @@
+# Copyright 2022 The Kubermatic Kubernetes Platform contributors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 grafana:
   rbac:
     create: true
@@ -896,7 +910,7 @@ grafana:
   ## Number of old ReplicaSets to retain
   ##
   revisionHistoryLimit: 10
-  ## Add a seperate remote image renderer deployment/service
+  ## Add a separate remote image renderer deployment/service
   imageRenderer:
     # Enable the image-renderer deployment & service
     enabled: false
