--- a/charts/monitoring/prometheus/rules/src/general/kube-kubelet.yaml
+++ b/charts/monitoring/prometheus/rules/src/general/kube-kubelet.yaml
@@ -28,7 +28,7 @@ groups:
       
       - alert: KubePersistentVolumeFillingUp
         annotations:
-          description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage }} free.
+          message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage }} free.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumefillingup
         summary: PersistentVolume is filling up.
         expr: |
@@ -48,7 +48,7 @@ groups:
           severity: critical
       - alert: KubePersistentVolumeFillingUp
         annotations:
-          description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage }} free.
+          message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage }} free.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumefillingup
         summary: PersistentVolume is filling up.
         expr: |
@@ -68,7 +68,7 @@ groups:
           severity: warning
       - alert: KubePersistentVolumeFillingUp
         annotations:
-          description: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is expected to fill up within four days. Currently {{ $value | humanizePercentage }} is available.
+          message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is expected to fill up within four days. Currently {{ $value | humanizePercentage }} is available.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumefillingup
           summary: PersistentVolume is filling up.
         expr: |
@@ -90,7 +90,7 @@ groups:
           severity: warning
       - alert: KubePersistentVolumeInodesFillingUp
         annotations:
-          description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} only has {{ $value | humanizePercentage }} free inodes.
+          message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} only has {{ $value | humanizePercentage }} free inodes.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumeinodesfillingup
           summary: PersistentVolumeInodes are filling up.
         expr: |
@@ -110,7 +110,7 @@ groups:
           severity: critical
       - alert: KubePersistentVolumeInodesFillingUp
         annotations:
-          description: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is expected to run out of inodes within four days. Currently {{ $value | humanizePercentage }} of its inodes are free.
+          message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is expected to run out of inodes within four days. Currently {{ $value | humanizePercentage }} of its inodes are free.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumeinodesfillingup
           summary: PersistentVolumeInodes are filling up.
         expr: |
@@ -132,7 +132,7 @@ groups:
           severity: warning
       - alert: KubePersistentVolumeErrors
         annotations:
-          description: The persistent volume {{ $labels.persistentvolume }} has status {{ $labels.phase }}.
+          message: The persistent volume {{ $labels.persistentvolume }} has status {{ $labels.phase }}.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat-sheets/alerting-runbook/#alert-name-kubepersistentvolumeerrors
           summary: PersistentVolume is having issues with provisioning.
         expr: |
