--- a/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
@@ -90,6 +90,7 @@ spec:
                     - Started
                     - StsRebuilding
                     - Completed
+                    - EtcdRestorePhaseEtcdLauncherNotEnabled
                   type: string
                 restoreTime:
                   format: date-time
