remove unnecessarily long, inconsistent prefix

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
@@ -90,7 +90,7 @@ spec:
                     - Started
                     - StsRebuilding
                     - Completed
-                    - EtcdRestorePhaseEtcdLauncherNotEnabled
+                    - EtcdLauncherNotEnabled
                   type: string
                 restoreTime:
                   format: date-time
