add EtcdLauncherNotEnabled phase to etcd restore (#11115)
* add EtcdLauncherNotEnabled phase to etcd restore

* update codegen

* remove EtcdRestorePhase prefix

Co-authored-by: Marvin Beckers <mail@embik.me>
Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>

* remove unnecessarily long, inconsistent prefix

Signed-off-by: Pratik Deoghare <pratik.deoghare@gmail.com>
Co-authored-by: Marvin Beckers <mail@embik.me>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_etcdrestores.yaml
@@ -90,6 +90,7 @@ spec:
                     - Started
                     - StsRebuilding
                     - Completed
+                    - EtcdLauncherNotEnabled
                   type: string
                 restoreTime:
                   format: date-time
