--- a/docs/zz_generated.kubermaticConfiguration.ee.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ee.yaml
@@ -464,7 +464,7 @@ spec:
   # Versions configures the available and default Kubernetes versions and updates.
   versions:
     # Default is the default version to offer users.
-    default: v1.23.12
+    default: v1.24.6
     # ExternalClusters contains the available and default Kubernetes versions and updates for ExternalClusters.
     externalClusters:
       aks:
@@ -556,6 +556,10 @@ spec:
       - automatic: true
         from: '>= 1.24.0, < 1.24.6'
         to: 1.24.6
+      - from: 1.24.*
+        to: 1.25.*
+      - from: 1.25.*
+        to: 1.25.*
     # Versions lists the available versions.
     versions:
       - v1.22.5
@@ -567,6 +571,7 @@ spec:
       - v1.23.12
       - v1.24.3
       - v1.24.6
+      - v1.25.2
   # VerticalPodAutoscaler configures the Kubernetes VPA integration.
   verticalPodAutoscaler:
     admissionController:
