--- a/addons/csi/openstack/controllerplugin.yaml
+++ b/addons/csi/openstack/controllerplugin.yaml
@@ -23,10 +23,13 @@
 {{ $version = "v1.22.0"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.23" }}
-{{ $version = "v1.23.0"}}
+{{ $version = "v1.23.4"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.24" }}
-{{ $version = "v1.24.0"}}
+{{ $version = "v1.24.3"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.25" }}
+{{ $version = "v1.25.0"}}
 {{ end }}
 {{ if not (eq $version "UNSUPPORTED") }}
 ---
