--- a/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/modifyset-customresourcedefinition.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/modifyset-customresourcedefinition.yaml
@@ -1,4 +1,4 @@
-# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.7.2/charts/gatekeeper/crds/config-customresourcedefinition.yaml
+# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.7.2/charts/gatekeeper/crds/constrainttemplatepodstatus-customresourcedefinition.yaml
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -7,21 +7,21 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.5.0
   labels:
     gatekeeper.sh/system: "yes"
-  name: assignmetadata.mutations.gatekeeper.sh
+  name: modifyset.mutations.gatekeeper.sh
 spec:
   group: mutations.gatekeeper.sh
   names:
-    kind: AssignMetadata
-    listKind: AssignMetadataList
-    plural: assignmetadata
-    singular: assignmetadata
+    kind: ModifySet
+    listKind: ModifySetList
+    plural: modifyset
+    singular: modifyset
   preserveUnknownFields: false
   scope: Cluster
   versions:
     - name: v1alpha1
       schema:
         openAPIV3Schema:
-          description: AssignMetadata is the Schema for the assignmetadata API.
+          description: ModifySet allows the user to modify non-keyed lists, such as the list of arguments to a container.
           properties:
             apiVersion:
               description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -36,12 +36,32 @@ spec:
                   type: string
               type: object
             spec:
-              description: AssignMetadataSpec defines the desired state of AssignMetadata.
+              description: ModifySetSpec defines the desired state of ModifySet.
               properties:
+                applyTo:
+                  description: ApplyTo lists the specific groups, versions and kinds a mutation will be applied to. This is necessary because every mutation implies part of an object schema and object schemas are associated with specific GVKs.
+                  items:
+                    description: ApplyTo determines what GVKs items the mutation should apply to. Globs are not allowed.
+                    properties:
+                      groups:
+                        items:
+                          type: string
+                        type: array
+                      kinds:
+                        items:
+                          type: string
+                        type: array
+                      versions:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  type: array
                 location:
+                  description: 'Location describes the path to be mutated, for example: `spec.containers[name: main].args`.'
                   type: string
                 match:
-                  description: Match selects objects to apply mutations to.
+                  description: Match allows the user to limit which resources get mutated. Individual match criteria are AND-ed together. An undefined match criteria matches everything.
                   properties:
                     excludedNamespaces:
                       items:
@@ -139,28 +159,40 @@ spec:
                       type: string
                   type: object
                 parameters:
+                  description: Parameters define the behavior of the mutator.
                   properties:
-                    assign:
-                      description: Assign.value holds the value to be assigned
-                      properties:
-                        fromMetadata:
-                          description: FromMetadata assigns a value from the specified metadata field.
-                          properties:
-                            field:
-                              description: Field specifies which metadata field provides the assigned value. Valid fields are `namespace` and `name`.
-                              type: string
-                          type: object
-                        value:
-                          description: Value is a constant value that will be assigned to `location`
-                          x-kubernetes-preserve-unknown-fields: true
+                    operation:
+                      default: merge
+                      description: Operation describes whether values should be merged in ("merge"), or pruned ("prune"). Default value is "merge"
+                      enum:
+                        - merge
+                        - prune
+                      type: string
+                    pathTests:
+                      description: PathTests are a series of existence tests that can be checked before a mutation is applied
+                      items:
+                        description: "PathTest allows the user to customize how the mutation works if parent paths are missing. It traverses the list in order. All sub paths are tested against the provided condition, if the test fails, the mutation is not applied. All `subPath` entries must be a prefix of `location`. Any glob characters will take on the same value as was used to expand the matching glob in `location`. \n Available Tests: * MustExist    - the path must exist or do not mutate * MustNotExist - the path must not exist or do not mutate."
+                        properties:
+                          condition:
+                            description: Condition describes whether the path either MustExist or MustNotExist in the original object
+                            enum:
+                              - MustExist
+                              - MustNotExist
+                            type: string
+                          subPath:
+                            type: string
+                        type: object
+                      type: array
+                    values:
+                      description: Values describes the values provided to the operation as `values.fromList`.
                       type: object
+                      x-kubernetes-preserve-unknown-fields: true
                   type: object
               type: object
             status:
-              description: AssignMetadataStatus defines the observed state of AssignMetadata.
+              description: ModifySetStatus defines the observed state of ModifySet.
               properties:
                 byPod:
-                  description: 'INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run "make" to regenerate code after modifying this file'
                   items:
                     description: MutatorPodStatusStatus defines the observed state of MutatorPodStatus.
                     properties:
@@ -202,7 +234,7 @@ spec:
     - name: v1beta1
       schema:
         openAPIV3Schema:
-          description: AssignMetadata is the Schema for the assignmetadata API.
+          description: ModifySet allows the user to modify non-keyed lists, such as the list of arguments to a container.
           properties:
             apiVersion:
               description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -213,12 +245,32 @@ spec:
             metadata:
               type: object
             spec:
-              description: AssignMetadataSpec defines the desired state of AssignMetadata.
+              description: ModifySetSpec defines the desired state of ModifySet.
               properties:
+                applyTo:
+                  description: ApplyTo lists the specific groups, versions and kinds a mutation will be applied to. This is necessary because every mutation implies part of an object schema and object schemas are associated with specific GVKs.
+                  items:
+                    description: ApplyTo determines what GVKs items the mutation should apply to. Globs are not allowed.
+                    properties:
+                      groups:
+                        items:
+                          type: string
+                        type: array
+                      kinds:
+                        items:
+                          type: string
+                        type: array
+                      versions:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  type: array
                 location:
+                  description: 'Location describes the path to be mutated, for example: `spec.containers[name: main].args`.'
                   type: string
                 match:
-                  description: Match selects objects to apply mutations to.
+                  description: Match allows the user to limit which resources get mutated. Individual match criteria are AND-ed together. An undefined match criteria matches everything.
                   properties:
                     excludedNamespaces:
                       items:
@@ -316,28 +368,40 @@ spec:
                       type: string
                   type: object
                 parameters:
+                  description: Parameters define the behavior of the mutator.
                   properties:
-                    assign:
-                      description: Assign.value holds the value to be assigned
-                      properties:
-                        fromMetadata:
-                          description: FromMetadata assigns a value from the specified metadata field.
-                          properties:
-                            field:
-                              description: Field specifies which metadata field provides the assigned value. Valid fields are `namespace` and `name`.
-                              type: string
-                          type: object
-                        value:
-                          description: Value is a constant value that will be assigned to `location`
-                          x-kubernetes-preserve-unknown-fields: true
+                    operation:
+                      default: merge
+                      description: Operation describes whether values should be merged in ("merge"), or pruned ("prune"). Default value is "merge"
+                      enum:
+                        - merge
+                        - prune
+                      type: string
+                    pathTests:
+                      description: PathTests are a series of existence tests that can be checked before a mutation is applied
+                      items:
+                        description: "PathTest allows the user to customize how the mutation works if parent paths are missing. It traverses the list in order. All sub paths are tested against the provided condition, if the test fails, the mutation is not applied. All `subPath` entries must be a prefix of `location`. Any glob characters will take on the same value as was used to expand the matching glob in `location`. \n Available Tests: * MustExist    - the path must exist or do not mutate * MustNotExist - the path must not exist or do not mutate."
+                        properties:
+                          condition:
+                            description: Condition describes whether the path either MustExist or MustNotExist in the original object
+                            enum:
+                              - MustExist
+                              - MustNotExist
+                            type: string
+                          subPath:
+                            type: string
+                        type: object
+                      type: array
+                    values:
+                      description: Values describes the values provided to the operation as `values.fromList`.
                       type: object
+                      x-kubernetes-preserve-unknown-fields: true
                   type: object
               type: object
             status:
-              description: AssignMetadataStatus defines the observed state of AssignMetadata.
+              description: ModifySetStatus defines the observed state of ModifySet.
               properties:
                 byPod:
-                  description: 'INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run "make" to regenerate code after modifying this file'
                   items:
                     description: MutatorPodStatusStatus defines the observed state of MutatorPodStatus.
                     properties:
@@ -376,3 +440,9 @@ spec:
       storage: true
       subresources:
         status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
