--- a/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/mutatorpodstatus-customresourcedefinition.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/gatekeeper/static/mutatorpodstatus-customresourcedefinition.yaml
@@ -1,4 +1,4 @@
-# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.5.2/charts/gatekeeper/crds/mutatorpodstatus-customresourcedefinition.yaml
+# Source:  https://github.com/open-policy-agent/gatekeeper/blob/v3.7.2/charts/gatekeeper/crds/mutatorpodstatus-customresourcedefinition.yaml
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -41,6 +41,9 @@ spec:
                     description: MutatorError represents a single error caught while adding a mutator to a system.
                     properties:
                       message:
+                        type: string
+                      type:
+                        description: Type indicates a specific class of error for use by controller code. If not present, the error should be treated as not matching any known type.
                         type: string
                     required:
                       - message
