[EE] add controller to provision kcp accounts for each KKP User

--- a/.gimps.yaml
+++ b/.gimps.yaml
@@ -24,6 +24,7 @@ sets:
     patterns:
       - 'k8s.io/**'
       - '*.k8s.io/**'
+      - 'github.com/kcp-dev/**'
   - name: envoy
     patterns:
       - 'github.com/envoyproxy/**'
