--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -167,7 +167,7 @@ spec:
                 kcp:
                   description: (EE-only) KCP configures the kcp integration.
                   properties:
-                    clientCASecretName:
+                    clientCaSecretName:
                       description: CACertificate is the name of a Kubernetes Secret in the same namespace as KKP that contains the CA used to sign and authenticate the client certificates issued for each KKP user. The certificate must use RSA. The secret must contain a "ca.crt" with the PEM-encoded certificate and a "ca.key" with the PEM-encoded private key.
                       type: string
                     homeRootPrefix:
@@ -177,7 +177,7 @@ spec:
                       description: PublicURL is the public URL to kcp under which the root workspace and all user home workspaces are available to endusers. The URL must not end with a trailing slash.
                       type: string
                   required:
-                    - clientCASecretName
+                    - clientCaSecretName
                     - homeRootPrefix
                     - publicURL
                   type: object
