Fake AWS preset
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -227,6 +227,8 @@ spec:
                   required:
                     - serviceAccount
                   type: object
+                genearateDownstream:
+                  type: boolean
                 gke:
                   properties:
                     datacenter:
