Fix image references in MLA helm charts and add metrics-scraper image to `mirror-images` (#11207)
* Update charts to use fully qualified image names

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Add missing image for metrics-scraper to pkg/install/images

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Update test fixtures

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/charts/mla/minio/values.yaml
+++ b/charts/mla/minio/values.yaml
@@ -26,7 +26,7 @@ minio:
   ## process used to create secret for prometheus ServiceMonitor).
   ##
   helmKubectlJqImage:
-    repository: bskim45/helm-kubectl-jq
+    repository: docker.io/bskim45/helm-kubectl-jq
     tag: 3.1.0
     pullPolicy: IfNotPresent
   ## minio server mode, i.e. standalone or distributed.
