Fix busybox image reference in promtail chart
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/charts/logging/promtail/values.yaml
+++ b/charts/logging/promtail/values.yaml
@@ -21,7 +21,7 @@ promtail:
     enabled: true
     fsInotifyMaxUserInstances: 256
     image:
-      repository: docker.io/library/busybox
+      repository: library/busybox
 
   podAnnotations:
     prometheus.io/scrape: "true"
