--- a/pkg/test/dualstack/egress-validator-6.yaml
+++ b/pkg/test/dualstack/egress-validator-6.yaml
@@ -22,7 +22,7 @@ spec:
       command:
         - /bin/ash
         - -c
-        - sleep 1000000000
+        - while true; do sleep 1; done
       readinessProbe:
         timeoutSeconds: 7
         exec:
