--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -21,6 +21,25 @@
 
 {{ if eq .Cluster.CloudProviderName "digitalocean" }}
 
+{{ $version := "UNSUPPORTED" }}
+
+{{ if eq .Cluster.MajorMinorVersion "1.22" }}
+{{ $version = "v4.2.0"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.23" }}
+{{ $version = "v4.3.0"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.24" }}
+{{ $version = "v4.3.0"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.24" }}
+{{ $version = "v4.3.0"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.25" }}
+{{ $version = "v4.3.0"}}
+{{ end }}
+
+{{ if not (eq $version "UNSUPPORTED") }}
 ---
 apiVersion: v1
 kind: Secret
@@ -118,7 +137,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-do-plugin
-          image: '{{ Image "digitalocean/do-csi-plugin:v4.2.0" }}'
+          image: '{{ Image (print "digitalocean/do-csi-plugin:" $version) }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--token=$(DIGITALOCEAN_ACCESS_TOKEN)"
@@ -355,7 +374,7 @@ spec:
             - name: registration-dir
               mountPath: /registration/
         - name: csi-do-plugin
-          image: '{{ Image "digitalocean/do-csi-plugin:v4.2.0" }}'
+          image: '{{ Image (print "digitalocean/do-csi-plugin:" $version) }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--url=$(DIGITALOCEAN_API_URL)"
@@ -429,4 +448,5 @@ roleRef:
   name: csi-do-node-driver-registrar-role
   apiGroup: rbac.authorization.k8s.io
 
+{{ end }}
 {{ end }}
